Fix search highlight lost when a virtual card scrolls out and back
virtualHits (the re-highlight set consulted by quizablePanelMaterialized) was
cleared inside clearHighlights(), which fires on every navigate-between-hits —
so it was wiped by the auto-navigate right after a search. The hit set belongs
to the QUERY, not to per-hit navigation: clear it once per query in searchSync
(repopulated by searchSyncVirtual), not in clearHighlights.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>